--- a/frontend/src/components/GameView/index.scss
+++ b/frontend/src/components/GameView/index.scss
@@ -16,6 +16,7 @@
     flex-direction: column;
     width: 20vw;
     height: 30vh;
+    overflow: scroll;
 }
 
 .initiative-item {
@@ -37,7 +38,7 @@
     }
 
     button:active {
-        background: rgb(233, 228, 217);
+        background: rgb(221, 214, 199);
     }
 }
 
@@ -55,7 +56,7 @@
 }
 
 .initiative-add:active {
-    background: rgb(233, 228, 217);
+    background: rgb(221, 214, 199);
 }
 
 /* Map Component Styles */
