--- a/frontend/src/components/GameView/index.scss
+++ b/frontend/src/components/GameView/index.scss
@@ -894,7 +894,7 @@
     margin-top: 2vh;
     margin-left: 1vw;
     height: 10vh;
-    width: 50vh;
+    width: 52vh;
     padding-left: .5vw;
     padding-right: .5vw;
     align-items: center;
@@ -903,16 +903,18 @@
 
     button {
         width: 3vw;
-        height: 3vh;
+        height: 5vh;
         text-align: center;
-        background: rgb(241, 236, 227);
+        background: none;
         border-radius: 1vh;
         margin: 1vh;
         border: none;
     }
 
-    button:active {
-        background: rgb(198, 194, 185);
+    .d-img {
+        width: 3.5vw;
+        margin-left: -1vw;
+        margin-top: -1vh;
     }
 
     a {
